--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/ssr": "^17.3.11",
     "@ngx-translate/core": "^16.0.3",
     "@ngx-translate/http-loader": "^16.0.0",
+    "echarts": "^5.5.1",
     "express": "^4.18.2",
+    "ngx-echarts": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
